# gradient

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
scripts/: benchmark.lua  build.sh
src/: main.cc
src/controllers/: PredictController.cc  PredictController.h
src/engine/: InferenceEngine.cc  InferenceEngine.h
